test/asm/use-label-outside-section.asm
lab:
	PRINTV lab-lab
	PRINTT "\n"
